# vault

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: spec  specs  todo
src/: args.rs  constants.rs  crc.rs  crypto.rs  engine.rs  engine_fs.rs  engine_kv.rs  error.rs  glob.rs  help.rs  interactive.rs  main.rs  prompt.rs  secret.rs  tests.rs  util.rs  utils.rs  zip.rs
src/arg/: help.rs  mod.rs  parser.rs
src/tui/: ansi.rs  config.rs  interactive.rs  logic.rs  mod.rs  term.rs  widget.rs
src/util/: algo.rs  common.rs  ext.rs  glob.rs  mod.rs  pattern.rs  serde.rs  sync.rs  zip.rs
