[package]
name = "vault"
version = "0.3.0"
authors = ["shridhar hegde <shridhar.me.003@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4"
crc = "2.1"
once_cell = "1.8"
orion = "0.16"
rpassword = "5.0"
serde = "1.0"
serde_json = "1.0"
zip = { version = "0.6", default-features = false }

[profile.release]
lto = "thin"
