[package]
name = "vault"
version = "0.3.0"
authors = ["shridhar hegde <shridhar.me.003@gmail.com>"]
edition = "2021"
rust-version = "1.60"

[dependencies]
chrono = "0.4"
crc = "2.1"
once_cell = "1.8"
orion = "0.16"
termion = "1.5"
zip = { version = "0.6", default-features = false }

[profile.release-lto]
inherits = "release"
lto = true
